--- a/libs/ui/src/lib/modules/shop/components/donation-recipient-selection/donation-recipient-selection.component.html
+++ b/libs/ui/src/lib/modules/shop/components/donation-recipient-selection/donation-recipient-selection.component.html
@@ -1,9 +1,10 @@
 <h2 class="trailer-2">Step 3 &mdash; Select Your Character</h2>
 
-<div class="column12">
+<div>
   <p>
-    Type to search for the recipient in-game character. Please ensure that you have selected the correct account as its
-    associated Steam ID will be used to disburse the points.
+    Type to search for the recipient in-game character. You might notice your player appears more than once. This is due to
+    how we collect and store player data. You can select any of the players that you recognize as yours as they will all have
+    the same Steam ID.
   </p>
 
   <p>
