--- a/libs/scss/modules/_search.scss
+++ b/libs/scss/modules/_search.scss
@@ -15,6 +15,8 @@
     border: 2pt solid $base_lightened;
     border-top: none;
     overflow-y: auto;
+    background: $base;
+    z-index: 1;
 
     .search-result {
       font-size: 1rem;
