--- a/libs/ui/src/lib/modules/shop/components/donation-selections-review/donation-selections-review.component.scss
+++ b/libs/ui/src/lib/modules/shop/components/donation-selections-review/donation-selections-review.component.scss
@@ -3,3 +3,11 @@
   flex-direction: column;
   align-items: center;
 }
+
+.product-icon {
+  width: 3rem;
+}
+
+.table-container {
+  width: 100%;
+}
