Make button container larger for more pay methods
Typos in payment terms

--- a/libs/ui/src/lib/modules/shop/components/donation-selections-review/donation-selections-review.component.html
+++ b/libs/ui/src/lib/modules/shop/components/donation-selections-review/donation-selections-review.component.html
@@ -10,21 +10,19 @@
 
 <div class="inform-context warn trailer-2">
   <p>
-    <strong>Notice</strong>: Donations made through supremegaming.gg for Supreme Gaming are optional and final. Funds
-    are
+    <strong>Notice</strong>: Donations made through supremegaming.gg for Supreme Gaming are optional and final. Funds are
     non-profit and serve only for the continued support and operation of Supreme Gaming services.
   </p>
 
   <p>
-    Point disbursements usually process within minutes of your payment posting but in rare cases the process can take up
-    to 24
-    hours. If you do not receive your rewards in that time frame, <a [routerLink]="['community/support']">please create
-      a ticket on our </a> for assistance.
+    Point disbursements usually process within minutes of your payment posting but in rare cases the process can take up to
+    24 hours. If you do not receive your rewards in that time frame,
+    <a [routerLink]="['community/support']">please create a ticket on our discord server</a> for assistance.
   </p>
 
   <p>
-    Attempts at fraud or abuse of the donation system will result in a permanent ban from <strong>ALL</strong> Supreme
-    Gaming services.
+    Attempts at fraud or abuse of the donation system will result in a permanent ban from <strong>ALL</strong> Supreme Gaming
+    services.
   </p>
 </div>
 
