--- a/libs/ui/src/lib/modules/shop/components/donation-selections-review/donation-selections-review.component.html
+++ b/libs/ui/src/lib/modules/shop/components/donation-selections-review/donation-selections-review.component.html
@@ -17,7 +17,7 @@
   <p>
     Point disbursements usually process within minutes of your payment posting but in rare cases the process can take up to
     24 hours. If you do not receive your rewards in that time frame,
-    <a [routerLink]="['community/support']">please create a ticket on our discord server</a> for assistance.
+    <a [routerLink]="['/community/support']">please create a ticket on our discord server</a> for assistance.
   </p>
 
   <p>
