--- a/libs/ui/src/lib/modules/shop/components/donation-selections-review/donation-selections-review.component.scss
+++ b/libs/ui/src/lib/modules/shop/components/donation-selections-review/donation-selections-review.component.scss
@@ -11,3 +11,9 @@
 .table-container {
   width: 100%;
 }
+
+.pp-button-area {
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  align-self: flex-end;
+}
